[package]
name = "explore"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
anyhow = "1.0.96"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }